// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/services DELETE / /:serviceId - delete service 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/services GET / /:serviceId - retrieve a service 1`] = `
Object {
  "entities": Object {
    "services": Object {
      "c5beec65-73a0-4b58-ba48-65986931d054": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "duration": 4,
        "id": "c5beec65-73a0-4b58-ba48-65986931d054",
        "isHidden": false,
        "name": "Test Service",
      },
    },
  },
  "result": "c5beec65-73a0-4b58-ba48-65986931d054",
}
`;

exports[`/api/services GET / retrieve services 1`] = `
Object {
  "entities": Object {
    "services": Object {
      "c5beec65-73a0-4b58-ba48-65986931d054": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "duration": 4,
        "id": "c5beec65-73a0-4b58-ba48-65986931d054",
        "isHidden": false,
        "name": "Test Service",
      },
    },
  },
  "result": Array [
    "c5beec65-73a0-4b58-ba48-65986931d054",
  ],
}
`;

exports[`/api/services JOIN / join practitioners 1`] = `
Object {
  "entities": Object {
    "practitioners": Object {
      "497ff59a-4bae-4013-bdce-b6b5be91a1f5": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "firstName": "Colonel",
        "fullAvatarUrl": null,
        "id": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "isActive": true,
        "isCustomSchedule": true,
        "isHidden": false,
        "lastName": "Sanders",
        "type": "Hygienist",
        "weeklyScheduleId": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
      },
    },
    "services": Object {
      "c5beec65-73a0-4b58-ba48-65986931d054": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "duration": 4,
        "id": "c5beec65-73a0-4b58-ba48-65986931d054",
        "isHidden": false,
        "name": "Test Service",
        "practitioners": Array [
          "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        ],
      },
    },
  },
  "result": Array [
    "c5beec65-73a0-4b58-ba48-65986931d054",
  ],
}
`;

exports[`/api/services POST / create service 1`] = `
Object {
  "entities": Object {
    "services": Object {
      "c5beec65-73a0-4b58-ba48-65986931d054": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "duration": 4,
        "id": "c5beec65-73a0-4b58-ba48-65986931d054",
        "isHidden": false,
        "name": "Test Service",
      },
    },
  },
  "result": "c5beec65-73a0-4b58-ba48-65986931d054",
}
`;

exports[`/api/services PUT / /:serviceId - update service 1`] = `
Object {
  "entities": Object {
    "services": Object {
      "c5beec65-73a0-4b58-ba48-65986931d054": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "createdAt": "2017-07-19T00:14:30.932Z",
        "duration": 4,
        "id": "c5beec65-73a0-4b58-ba48-65986931d054",
        "isHidden": false,
        "name": "Updated Test Service",
        "practitioners": Array [
          "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        ],
      },
    },
  },
  "result": "c5beec65-73a0-4b58-ba48-65986931d054",
}
`;
